projects/compiler/test/typechecker/import/error_duplicate_variable_name.4.out
Error at %FILE_NAME%:3:6
Duplicate name 'a'
  |  enum a {}
          ^
This name is also declared at (1:8)
  |  import a from "./_exports"
            ^
