projects/compiler/test/typechecker/import/error_duplicate_variable_name.3.abra
import a from "./_exports"

type a {}
